fix: Slightly improve the colors of the destructive actions in dark mode

--- a/tooling/tailwind/globals.css
+++ b/tooling/tailwind/globals.css
@@ -57,7 +57,7 @@
     --accent: 217.2 32.6% 17.5%;
     --accent-foreground: 210 40% 98%;
 
-    --destructive: 0 62.8% 30.6%;
+    --destructive: 0 80% 45%;
     --destructive-foreground: 210 40% 98%;
 
     --border: 217.2 32.6% 17.5%;
